--- a/apps/www/content/docs/theming.mdx
+++ b/apps/www/content/docs/theming.mdx
@@ -68,11 +68,11 @@ The `background` suffix is omitted when the variable is used for the background 
 Given the following CSS variables:
 
 ```css
---primary: 222.2 47.4% 11.2%;
---primary-foreground: 210 40% 98%;
+--primary: hsl(222.2 47.4% 11.2%);
+--primary-foreground: hsl(210 40% 98%);
 ```
 
-The `background` color of the following component will be `hsl(var(--primary))` and the `foreground` color will be `hsl(var(--primary-foreground))`.
+The `background` color of the following component will be `var(--primary)` and the `foreground` color will be `var(--primary-foreground)`.
 
 ```tsx
 <div className="bg-primary text-primary-foreground">Hello</div>
@@ -80,7 +80,7 @@ The `background` color of the following component will be `hsl(var(--primary))` 
 
 <Callout>
 
-**CSS variables must be defined without color space function**. See the [Tailwind CSS documentation](https://tailwindcss.com/docs/customizing-colors#using-css-variables) for more information.
+**CSS variables should be defined with color space function as of Tailwind v4**. See the [Tailwind CSS documentation](https://tailwindcss.com/docs/colors#referencing-in-css) for more information.
 
 </Callout>
 
@@ -91,55 +91,55 @@ Here's the list of variables available for customization:
 <Steps>
 
 ```css title="Default background color of <body />...etc"
---background: 0 0% 100%;
---foreground: 222.2 47.4% 11.2%;
+--background: hsl(0 0% 100%);
+--foreground: hsl(222.2 47.4% 11.2%);
 ```
 
 ```css title="Muted backgrounds such as <TabsList />, <Skeleton /> and <Switch />"
---muted: 210 40% 96.1%;
---muted-foreground: 215.4 16.3% 46.9%;
+--muted: hsl(210 40% 96.1%);
+--muted-foreground: hsl(215.4 16.3% 46.9%);
 ```
 
 ```css title="Background color for <Card />"
---card: 0 0% 100%;
---card-foreground: 222.2 47.4% 11.2%;
+--card: hsl(0 0% 100%);
+--card-foreground: hsl(222.2 47.4% 11.2%);
 ```
 
 ```css title="Background color for popovers such as <DropdownMenu />, <HoverCard />, <Popover />"
---popover: 0 0% 100%;
---popover-foreground: 222.2 47.4% 11.2%;
+--popover: hsl(0 0% 100%);
+--popover-foreground: hsl(222.2 47.4% 11.2%);
 ```
 
 ```css title="Default border color"
---border: 214.3 31.8% 91.4%;
+--border: hsl(214.3 31.8% 91.4%);
 ```
 
 ```css title="Border color for inputs such as <Input />, <Select />, <Textarea />"
---input: 214.3 31.8% 91.4%;
+--input: hsl(214.3 31.8% 91.4%);
 ```
 
 ```css title="Primary colors for <Button />"
---primary: 222.2 47.4% 11.2%;
---primary-foreground: 210 40% 98%;
+--primary: hsl(222.2 47.4% 11.2%);
+--primary-foreground: hsl(210 40% 98%);
 ```
 
 ```css title="Secondary colors for <Button />"
---secondary: 210 40% 96.1%;
---secondary-foreground: 222.2 47.4% 11.2%;
+--secondary: hsl(210 40% 96.1%);
+--secondary-foreground: hsl(222.2 47.4% 11.2%);
 ```
 
 ```css title="Used for accents such as hover effects on <DropdownMenuItem>, <SelectItem>...etc"
---accent: 210 40% 96.1%;
---accent-foreground: 222.2 47.4% 11.2%;
+--accent: hsl(210 40% 96.1%);
+--accent-foreground: hsl(222.2 47.4% 11.2%);
 ```
 
 ```css title="Used for destructive actions such as <Button variant="destructive">"
---destructive: 0 100% 50%;
---destructive-foreground: 210 40% 98%;
+--destructive: hsl(0 100% 50%);
+--destructive-foreground: hsl(210 40% 98%);
 ```
 
 ```css title="Used for focus ring"
---ring: 215 20.2% 65.1%;
+--ring: hsl(215 20.2% 65.1%);
 ```
 
 ```css title="Border radius for card, input and buttons"
@@ -154,13 +154,8 @@ To add new colors, you need to add them to your CSS file and to your `tailwind.c
 
 ```css title="app/globals.css"
 :root {
-  --warning: 38 92% 50%;
-  --warning-foreground: 48 96% 89%;
-}
-
-.dark {
-  --warning: 48 96% 89%;
-  --warning-foreground: 38 92% 50%;
+  --warning: light-dark(hsl(38 92% 50%), hsl(48 96% 89%));
+  --warning-foreground: light-dark(hsl(48 96% 89%), hsl(38 92% 50%));
 }
 ```
 
@@ -169,8 +164,8 @@ module.exports = {
   theme: {
     extend: {
       colors: {
-        warning: "hsl(var(--warning))",
-        "warning-foreground": "hsl(var(--warning-foreground))",
+        warning: "var(--warning)",
+        "warning-foreground": "var(--warning-foreground)",
       },
     },
   },
