docs(www): correct next.js cli command

--- a/apps/www/content/docs/tailwind-v4.mdx
+++ b/apps/www/content/docs/tailwind-v4.mdx
@@ -58,7 +58,7 @@ I'm still working on the docs, but here's a quick guide to testing new projects:
 1. Start a new project with Tailwind v4 and React 19:
 
 ```bash
-pnpm create next-app@canary --tailwind --eslint --typescript --app --no-src-dir
+npx create-next-app@canary --tailwind --eslint --typescript --app --no-src-dir
 ```
 
 2. Init shadcn/ui. This will create your `components.json` and set up your CSS variables:
