feat (dialog): add hideCloseButton option to hide upper right close-window button

--- a/apps/www/content/docs/components/dialog.mdx
+++ b/apps/www/content/docs/components/dialog.mdx
@@ -85,6 +85,10 @@ import {
 
 <ComponentPreview name="dialog-close-button" />
 
+### Hide upper right close-window button
+
+<ComponentPreview name="dialog-hide-close-window-button" />
+
 ## Notes
 
 To activate the `Dialog` component from within a `Context Menu` or `Dropdown Menu`, you must encase the `Context Menu` or
