feat: - The time-picker component first come out

--- a/apps/www/content/docs/components/time-picker.mdx
+++ b/apps/www/content/docs/components/time-picker.mdx
@@ -1,8 +1,14 @@
 ---
 title: Time Picker
-description: A vertically stacked set of interactive headings that each reveal a section of content.
+description: Some components allow users to choose a period of time.
 component: true
 links:
   doc: https://www.radix-ui.com/docs/primitives/components/accordion
   api: https://www.radix-ui.com/docs/primitives/components/accordion#api-reference
 ---
+
+<ComponentPreview
+  name="time-picker-container-demo"
+  className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
+  description="Some components allow users to choose a period of time."
+/>
