build:build registry

--- a/apps/www/content/docs/components/time-picker.mdx
+++ b/apps/www/content/docs/components/time-picker.mdx
@@ -76,6 +76,14 @@ return <TimePickerContainer onTimeChange={(v)=>setTime(v)}>
   description="Use the Time Picker in a Dialog component."
 />
 
+### Use in a Popover
+
+<ComponentPreview
+  name="time-picker-with-popover"
+  className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
+  description="Use the Time Picker in a Popover component."
+/>
+
 ### Control the Time Picker's value with a state outside
 
 <ComponentPreview
