--- a/apps/www/content/docs/installation/vite.mdx
+++ b/apps/www/content/docs/installation/vite.mdx
@@ -3,6 +3,11 @@ title: Vite
 description: Install and configure shadcn/ui for Vite.
 ---
 
+<Callout className="bg-blue-50 border-blue-600 dark:border-blue-900 dark:bg-blue-950 mb-6 [&_code]:bg-blue-100 dark:[&_code]:bg-blue-900">
+  **Note:** The following guide is for Tailwind v4. If you are using Tailwind
+  v3, use `shadcn@2.3.0`.
+</Callout>
+
 <Steps>
 
 ### Create project
