docs: dark mode changelog

--- a/apps/www/content/docs/tailwind-v4.mdx
+++ b/apps/www/content/docs/tailwind-v4.mdx
@@ -292,6 +292,10 @@ function AccordionItem({
 }
 ```
 
+## Dark Mode
+
+We've revisted the dark mode colors and updated them to be more accessible. If you're running an existing Tailwind v4 project, see the [Dark Mode](/docs/dark-mode/changelog) page for a list of updated colors.
+
 ## Share Your Feedback
 
 We’d love for you to test these updates and share your feedback! If you run into anything weird or have suggestions, add a comment below.
