docs: fix typo in CSS selector

--- a/apps/www/content/docs/theming.mdx
+++ b/apps/www/content/docs/theming.mdx
@@ -309,7 +309,7 @@ For reference, here's a list of the base colors that are available.
   --sidebar-ring: oklch(0.705 0.015 286.067);
 }
 
-dark {
+.dark {
   --background: oklch(0.141 0.005 285.823);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.21 0.006 285.885);
