docs(Toast): add tw4 and react19 specifics

--- a/apps/www/content/docs/components/toast.mdx
+++ b/apps/www/content/docs/components/toast.mdx
@@ -9,7 +9,7 @@ links:
 
 <Callout>
 
-We're deprecating the `toast` component in favor of `sonner`.
+We're deprecating the `toast` component in favor of `sonner` in projects using Tailwind v4 and React 19.
 [Read more](https://ui.shadcn.com/docs/tailwind-v4#whats-new)
 
 </Callout>
