docs: remove isolated remix page from installation guides

--- a/apps/www/content/docs/installation/react-router.mdx
+++ b/apps/www/content/docs/installation/react-router.mdx
@@ -3,6 +3,12 @@ title: React Router
 description: Install and configure shadcn/ui for React Router.
 ---
 
+<Callout>
+
+**Note:** This guide is for React Router. For Remix, see the [Remix](/docs/installation/remix) guide.
+
+</Callout>
+
 <Steps>
 
 ### Create project
