--- a/apps/www/content/docs/installation/vite-javascript.mdx
+++ b/apps/www/content/docs/installation/vite-javascript.mdx
@@ -18,6 +18,24 @@ Start by creating a new React project using `vite`. Select the **React + TypeScr
 npm create vite@latest
 ```
 
+You will be asked a few questions to configure your react app
+
+```txt
+Project name:
+```
+
+```txt
+Select a framework: React
+```
+
+```txt
+Select a variant: JavaScript
+```
+
+```bash
+npm install
+```
+
 ### Add Tailwind CSS
 
 ```bash
@@ -30,9 +48,7 @@ Replace everything in `src/index.css` with the following:
 @import "tailwindcss";
 ```
 
-### Edit jsconfig.json file
-
-`jsconfig.app.json` files:
+### Create a jsconfig.json file inside the root directory
 
 ```ts {11-16} showLineNumbers
 {
