--- a/apps/www/content/docs/installation/vite-javascript.mdx
+++ b/apps/www/content/docs/installation/vite-javascript.mdx
@@ -12,7 +12,7 @@ description: Install and configure shadcn/ui for Vite.
 
 ### Create project
 
-Start by creating a new React project using `vite`. Select the **React + TypeScript** template:
+Start by creating a new React project using `vite`. Select the **React + JavaScript** template:
 
 ```bash
 npm create vite@latest
